﻿
todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system
mac getIpByName liefert name von IPnum


##################################################################
opsi-winst/opsi-script (4.12.3.6) experimental; urgency=low

  * new statement: forceLogInAppenMode = (true/false)
  * RequiredOpsiscriptVersion
  * %OpsiscriptVersion%
  * %OpsiscriptDir%
  * new boolean function isPingReachable(<host>)

-- Detlef Oertel <d.oertel@uib.de>  Thu, 09 Jan 2020:15:00:00 +0200

opsi-winst/opsi-script (4.12.3.5) experimental; urgency=low

  * new procedure reverseProductOrderByUninstall: ProductList is reordered so that
      uninstall actions will be conducted first and in reverse order as the prodcuts were installed
  * new config opsi-script.global.ReverseProductOrderByUninstall
  * postinst script was adapted for the new config opsi-script.global.ReverseProductOrderByUninstall

-- Jan Werner <j.werner@uib.de>  Mon, 6 Jan 2020:13:35:00 +0200


opsi-winst/opsi-script (4.12.3.4) experimental; urgency=low

  * new unit ostxstringlist
  * osfunclin: which() now using FindDefaultExecutablePath
  * osfunc: StartProcess_cp: now supports WaitForProcessEnding also for [L/M]
  * Winbatch now supports WaitForProcessEnding also for [L/M]
  * new string function which(<command in path>) : string (command with path) [W/L/M]
  * new stringlist function replaceOpsiConstants(<list>) : <list>
  * new string function replaceOpsiConstants(<string>) : <string>
  * osparser: create cmd64.exe in execshellcall and execdosbatch:
      create also cmd64.exe.mui files
  * new boolean function isPingReachable(<target host>) : bool

-- Detlef Oertel <d.oertel@uib.de>  Fri, 27 Dec 2019:15:00:00 +0200

opsi-winst/opsi-script (4.12.3.2) experimental; urgency=low

  * osProcessux: getCommandResult: give always the first string ; fixes a getmyip Problem

-- Detlef Oertel <d.oertel@uib.de>  Tue, 19 Nov 2019:15:00:00 +0200
