@@ -2336,8 +2336,22 @@ begin
               //wait until a window is appearing
               if FindWindowEx(0, 0, nil, PChar(Ident)) = 0 then
               begin
-                running := True;
-                logdatei.log('Wait for appear Window: "' + Ident + 'not found.', LLDebug);
+                logdatei.log('Wait for appear Window: "' + Ident +
+                  'not found.', LLDebug);
+                if WaitSecs = 0 then
+                  running := True
+                else
+                begin //time out given
+                  if ((nowtime - starttime) < waitSecs / secsPerDay) then
+                  begin
+                    running := True;
+                  end
+                  else
+                  begin
+                    logdatei.log('Wait for appear Window "' + ident +
+                      '" stopped - time out ' + IntToStr(waitSecs) + ' sec', LLInfo);
+                  end;
+                end;
               end
               else
                 logdatei.log('Wait for appear Window: "' + Ident + ' found.', LLDebug);
@@ -2355,9 +2369,22 @@ begin
               end;
 
               if not WaitWindowStarted or WaitForWindowVanished then
-                running := True;
               // in case WaitForWindowVanished we are not yet ready
               // but have to check waiting condition 3
+              if WaitSecs = 0 then
+                running := True
+              else
+              begin //time out given
+                if ((nowtime - starttime) < waitSecs / secsPerDay) then
+                begin
+                  running := True;
+                end
+                else
+                begin
+                  logdatei.log('Wait for vanish Window "' + ident +
+                    '" stopped - time out ' + IntToStr(waitSecs) + ' sec', LLInfo);
+                end;
+              end;
             end
 
             else
@@ -2453,7 +2480,8 @@ begin
                   lpExitCode := FpcProcess.ExitCode;
                   logdatei.log(
                     'Process : ' + FpcProcess.Executable + ' terminated at: ' +
-                    DateTimeToStr(now) + ' exitcode is: ' + IntToStr(lpExitCode), LLInfo);
+                    DateTimeToStr(now) + ' exitcode is: ' +
+                    IntToStr(lpExitCode), LLInfo);
                 end;
                 {$ENDIF LINUX}
               end;
@@ -2513,8 +2541,8 @@ begin
             else if waitForReturn then
             begin
               //waiting condition 4 : Process is still active
-              if waitsecsAsTimeout and (waitSecs >
-                0) // we look for time out
+              if waitsecsAsTimeout and
+                (waitSecs > 0) // we look for time out
                 and  //time out occured
                 ((nowtime - starttime) >= waitSecs / secsPerDay) then
               begin
@@ -2942,8 +2970,8 @@ begin
             else if waitForReturn then
             begin
               //waiting condition 4 : Process is still active
-              if waitsecsAsTimeout and (waitSecs >
-                0) // we look for time out
+              if waitsecsAsTimeout and
+                (waitSecs > 0) // we look for time out
                 and  //time out occured
                 ((nowtime - starttime) >= waitSecs / secsPerDay) then
               begin
@@ -3316,8 +3344,8 @@ begin
             else if waitForReturn then
             begin
               //waiting condition 4 : Process is still active
-              if waitsecsAsTimeout and (waitSecs >
-                0) // we look for time out
+              if waitsecsAsTimeout and
+                (waitSecs > 0) // we look for time out
                 and  //time out occured
                 ((nowtime - starttime) >= waitSecs / secsPerDay) then
               begin
